@@ -1,3 +1,15 @@
+2006-05-24  Csaba Henk <csaba.henk@creo.hu>
+        * Revamp fs initialization code.
+	   - Get rid of both of the kopts/lopts and the fuse_opt stuff,
+	     just keep opts in a dict and assemble a simple argc/argv pair
+	     from that. This means that for all supported API versions we can
+	     get away with the fuse_setup() / *fuse_loop*() / fuse_teardown()
+	     call sequence. This is much more clean and correct than the
+	     earlier approaches, and differenciating between APIs boils down
+	     to differenciating between the exact form of the above routines.
+           - Properly catch and propagate errors.
+           - Add crude support for fetching options from command line to xmp.py.
+
 2006-05-23  Csaba Henk <csaba.henk@creo.hu>
         * Fix statfs index mismatch in xmp.py.
         * Rebase build system on pkg-config.
